T-6399 theme: Stop clipping of totara menu sub tabs
Reviewed-on: https://review.totaralms.com/650
Tested-by: Totara Hudson <totara-hudson@catalyst.net.nz>

--- a/theme/totara/styles_totara.css
+++ b/theme/totara/styles_totara.css
@@ -391,7 +391,6 @@ div#totara_menu {
 /* Unselected primary navigation */
 div#totara_menu ul {
     height: 72px;
-    overflow: hidden;
     padding: 0 0 0 25px;
 }
 
